# wizardjoeavatar

./: .gitattributes  .gitignore  AGENTS.md  CODEX_GOAL.md  DOCUMENT_MANIFEST.json  README.md  pyproject.toml  requirements.txt
companion/: README.md  package-lock.json  package.json
companion/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/icons/: icon.icns
companion/src-tauri/resources/sidecar/: README.txt
companion/src-tauri/src/: bridge.rs  lib.rs  lifecycle.rs  main.rs
docs/: 00-goal-and-visual-contract.md  01-multi-agent-coordination.md  02-repository-discovery.md  03-required-architecture.md  04-module-structure.md  05-output-grid.md  06-fixed-environment.md  07-perspective-floor.md  08-canonical-local-grid.md  09-color-palette.md  10-glyph-language.md  11-ordered-layers.md  12-front-view-construction.md  13-directional-views.md  14-joint-skeleton.md  15-procedural-walking.md  16-world-space-movement.md  17-eight-direction-facing.md  18-circular-walking.md  19-path-following.md  20-expressions.md  21-blinking.md  22-speech-mouth-shapes.md  23-animation-channels.md  24-design-board-actions.md  25-contact-shadow.md  26-asciline-frame-source.md  INDEX.md  (+13 more)
rust/wizard_avatar_engine/: Cargo.toml  README.md
rust/wizard_avatar_engine/assets/: wizard_chat_motion_graph_v1.json
rust/wizard_avatar_engine/assets/newsroom/catalogs/: pose-catalog.json  requirements-traceability.csv  test-matrix.csv  transition-matrix.json
rust/wizard_avatar_engine/assets/newsroom/scenes/: compiled-manifest.json
rust/wizard_avatar_engine/assets/newsroom/schemas/: actor-render-sample-v1.schema.json  implementation-work-item-v1.schema.json  news-performance-cue-v1.schema.json  newsroom-motion-policy-v1.schema.json  pose-definition-v1.schema.json  speech-timeline-v1.schema.json  transition-definition-v1.schema.json
rust/wizard_avatar_engine/assets/newsroom/v2/: promotion-manifest.json
rust/wizard_avatar_engine/assets/pose_graphs/v6/: runtime-manifest.json
rust/wizard_avatar_engine/src/: animation.rs  capability_manifest.rs  cell.rs  chat_event.rs  chat_inbox.rs  chat_performance.rs  chat_policy.rs  codec.rs  command.rs  controller.rs  demo.rs  evidence.rs  evidence_main.rs  frame_source.rs  geometry.rs  hub.rs  lib.rs  main.rs  motion_catalog.rs  motion_director.rs  motion_graph.rs  newsroom.rs  newsroom_scene.rs  palette.rs  pathing.rs  performance.rs  performance_score.rs  pose.rs  pose_archive.rs  pose_asset.rs  pose_catalog_main.rs  pose_clip.rs  pose_evidence_main.rs  pose_graph_audit.rs  pose_graph_runtime.rs  pose_playback.rs  pose_program.rs  projection.rs  quality.rs  reference_avatar.rs  (+9 more)
rust/wizard_avatar_engine/tests/: animation_graph.rs  animation_transitions.rs  capability_manifest.rs  chat_event_contract.rs  chat_inbox.rs  chat_policy.rs  chat_state_regions.rs  command_ordering.rs  fixed_clock.rs  frame_quality_gate.rs  future_pose_catalog.rs  future_pose_program.rs  future_pose_transitions.rs  imported_pose_library.rs  motion_catalog.rs  motion_director.rs  motion_graph_contract.rs  motion_ground_locomotion.rs  multiclient_fanout.rs  newsroom_contract.rs  path_continuity.rs  performance_manifest.rs  performance_score.rs  pose_clips.rs  pose_metadata.rs  projection_contact.rs  reference_pose_library.rs  release_evidence.rs  release_registry.rs  rust_objective_contract.rs  snapshot_manifest.rs  websocket_stream.rs  wjfl_clip_quality.rs
rust/wizard_avatar_engine/tests/fixtures/chat/: good_commands.json  good_events.json  invalid_commands.json  invalid_events.json
rust/wizard_avatar_engine/tests/fixtures/media/: performance-score-v1.minimal.json
rust/wizard_avatar_engine/tests/fixtures/motion/: bad_marked_loop.patch.json  bad_missing_reference.patch.json  bad_unknown_field.patch.json  good_graph_v1.json
rust/wizard_avatar_engine/web/: asciline_client.js  asciline_codec.js  canvas_renderer.js  index.html  motion_tour.js  newsroom_controls.js  pixel_graph_renderer.js  pixel_graph_worker.js  wizard.js
rust/wizard_avatar_engine/web/tests/: canvas_renderer.test.mjs  codec_queue.test.mjs  motion_tour.test.mjs  newsroom_controls.test.mjs  pixel_graph_renderer.test.mjs
rust/wizard_avatar_engine/web/tests/rchat/: README.md  browser_harness.mjs  browser_harness.test.mjs
rust/wizard_avatar_engine/web/tools/: verify_animation_evidence.mjs
rust/wizard_avatar_pose_tool/: Cargo.toml
rust/wizard_avatar_pose_tool/src/: admission.rs  archive.rs  compiler.rs  error.rs  feelings_intake_main.rs  feelings_spec.rs  isolation.rs  lib.rs  main.rs  matte_audit_main.rs  model.rs  newsroom_admission.rs  newsroom_ingest_one_main.rs  newsroom_layer_compile_one_main.rs  newsroom_layer_review_one_main.rs  newsroom_layers.rs  newsroom_promote_main.rs  newsroom_promotion.rs  newsroom_review_one_main.rs  overlay.rs  pixel_graph.rs  pixel_sample_main.rs  pixelgraph_promote_main.rs  pixelgraph_promotion.rs  pose_exclude_non_pose_main.rs  pose_ingest_one_main.rs  pose_promote_main.rs  pose_reject_one_main.rs  pose_reopen_one_main.rs  pose_review_one_main.rs  production_alpha.rs  production_alpha_finalize_main.rs  production_alpha_main.rs  quantize.rs  raster.rs  semantics.rs  source_ledger.rs  source_ledger_main.rs  spec.rs  verification.rs
rust/wizard_avatar_pose_tool/tests/: archive_compile.rs  feelings_archive.rs
tools/rchat/: Cargo.toml  README.md
tools/rchat/src/: evidence.rs  lib.rs  main.rs  scope.rs
tools/rchat/tests/: evidence.rs  material_registry.rs  scope.rs  validator.rs
tools/rchat/tests/fixtures/: evidence-run.json  valid-gate.json  valid-registry.json
(+1439 files in other folders)
