[package]
name = "wizard-joe-companion"
version = "0.1.0"
description = "Native lifecycle shell for Wizard Joe Companion"
authors = ["Jedi Sherpa"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wizard_joe_companion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
base64 = "=0.22.1"
getrandom = "=0.3.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-single-instance = "=2.4.3"
tauri-plugin-autostart = "=2.5.1"
tungstenite = "=0.28.0"
