[package]
name = "wizard_avatar_pose_tool"
version = "0.1.0"
edition = "2021"
description = "Deterministic offline compiler for WizardJoe reference pose archives"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[lib]
name = "wizard_avatar_pose_tool"
path = "src/lib.rs"

[[bin]]
name = "wizard-avatar-pose-tool"
path = "src/main.rs"

[[bin]]
name = "wizard-avatar-feelings-intake"
path = "src/feelings_intake_main.rs"

[[bin]]
name = "wizard-avatar-pose-promote"
path = "src/pose_promote_main.rs"
