[package]
name = "wizardjoe-rchat-validator"
version = "0.1.0"
edition = "2021"
description = "Standalone validator for Wizard Joe Rust chatbot registry and gate records"
license = "MIT"
publish = false

[lib]
name = "wizardjoe_rchat_validator"
path = "src/lib.rs"

[[bin]]
name = "wizardjoe-rchat-validator"
path = "src/main.rs"

[dependencies]
serde_json = "1"
sha2 = "0.10"
